--- a/portolio-site/css/style2.css
+++ b/portolio-site/css/style2.css
@@ -3,6 +3,8 @@
   --secondary-color: #333;
   --dark: #000;
   --light: #fff;
+  --primary-font: "Source Serif Pro", serif;
+  --display-font: "Source Code Pro", sans-serif;
 }
 
 
@@ -15,7 +17,6 @@
 }
 
 body {
-  font-family: "Quicksand", sans-serif !important;
   background-color: var(--primary-color);
 }
 
@@ -24,9 +25,17 @@ h2,
 h3,
 h4,
 h5 {
-  font-family: "Pacifico", sans-serif;
+  font-family: var(--display-font);
   font-weight: 600;
   color: var(--secondary-color);
+}
+
+p {
+  font-family: var(--primary-font);
+}
+
+.h1 {
+  font-family: var(--display-font);
 }
 
 .lg-font {
@@ -72,6 +81,7 @@ h5 {
 
 .nav-link {
   color: var(--secondary-color) !important;
+  font-family: var(--primary-font);
 }
 
 .navbar a {
@@ -179,10 +189,11 @@ h5 {
 
 .portfolio-example .btn {
   display: inline-block;
+  font-family: var(--display-font);
   font-size: 14px;
   font-weight: 500;
   text-transform: uppercase;
-  padding: 10px 20px;
+  padding: 10px 15px;
   border-radius: 50px;
   margin: 20px 10px;
   transition: all 0.3s ease-in-out;
